fix: add higher contrast for restaurants detailed page

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ header {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #02438D;
     text-decoration: none;
 }
 
@@ -203,7 +203,7 @@ header {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #8A4700;
   /*font-family: Arial,sans-serif;*/
   font-size: 20pt;
   font-weight: 200;
@@ -239,7 +239,7 @@ header {
   padding: 1.5em;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #8A4700;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
